feat: Add httpd.conf.j2 and restart handler (Fix: use inventory_hostname)

--- a/roles/web/templates/httpd.conf.j2
+++ b/roles/web/templates/httpd.conf.j2
@@ -23,7 +23,7 @@ Group apache
 
 # Server Admin
 ServerAdmin {{ apache_admin_email | default('root@localhost') }}
-ServerName {{ ansible_hostname }}
+ServerName {{ inventory_hostname }}
 
 # Document Root
 DocumentRoot "{{ apache_doc_root | default('/var/www/localhost/htdocs') }}"
